# slot-engine

./: .dockerignore  .gitignore  COMMANDS.md  Dockerfile  Makefile  ROADMAP.md  docker-compose.yml  pyproject.toml
games/: lucky_bonus.toml  lucky_sevens.toml  sweet_cascade.toml  wild_sevens.toml
src/scripts/: demo.py
src/slot_engine/: __init__.py  cli.py  engine.py  evaluator.py  game.py  rng.py
src/slot_engine/config/: __init__.py  loader.py  models.py
src/slot_engine/domain/: __init__.py  cascade_rules.py  evaluation.py  line_win.py  payline.py  paytable.py  play_result.py  reel.py  spin_result.py  symbol.py
src/slot_engine/engines/: __init__.py  base.py  registry.py
src/slot_engine/engines/impls/: __init__.py  classic_lines.py  lucky_bonus.py  sweet_cascade.py  wild_sevens.py
src/slot_engine/free_spins/: __init__.py
src/slot_engine/server/: __init__.py  app.py  dto.py
src/slot_engine/simulation/: __init__.py  result.py  simulator.py
src/slot_engine/wallet/: __init__.py  models.py  operations.py  store.py
tests/: test_classic_lines.py  test_free_spins.py  test_game.py  test_registry.py  test_server.py  test_simulator.py  test_smoke.py  test_sweet_cascade.py  test_wallet.py
